# SimpleSDLMessenger

./: CMakeLists.txt  README.md  cipher.h  client.cpp  functions.h  server.cpp
